<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="310dp"
        android:layout_height="276dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo_foreground"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/id_uname"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/circle"
        android:hint="@string/hint_username"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_login"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/id_passwd"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circle"
        android:hint="@string/hint_password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_uname"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circle_fill"
        android:onClick="login"
        android:text="@string/text_login"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_passwd"
        tools:ignore="Autofill,Deprecated,TextFields" />

</androidx.constraintlayout.widget.ConstraintLayout>