<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmergenciesActivity">

    <ImageView
        android:id="@+id/img_emergencies"
        android:layout_width="254dp"
        android:layout_height="256dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/danger_foreground" />

    <Spinner
        android:id="@+id/id_spinner"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_patient_need" />

    <TextView
        android:id="@+id/text_patient_need"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_patient_need"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_emergencies" />

    <TextView
        android:id="@+id/text_patient_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_patient_room"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_spinner" />

    <Spinner
        android:id="@+id/id_rooms"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_patient_room" />

    <EditText
        android:id="@+id/button_emergencies"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/circle_fill_urgent"
        android:layout_marginTop="12dp"
        android:text="@string/text_emergencies"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:onClick="sendPatientUrgencies"
        android:editable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_rooms"
        tools:ignore="Autofill,LabelFor,TextFields" />
</androidx.constraintlayout.widget.ConstraintLayout>